@@ -232,3 +232,9 @@ lib/getpagesize.h
 m4/getpagesize.m4
 
 m4/onceonly_2_57.m4
+lib/md5.h
+lib/md5.c
+m4/md5.m4
+m4/uint32_t.m4
+
+m4/onceonly_2_57.m4
